Create: login & signup view

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,28 @@
 <%- include('./partials/header'); %>
 
-<h1>Log In</h1>
+<form>
+  <h2>Log In</h2>
+  <label for="email">Email</label>
+  <input type="email" name="email" id="email" required />
+  <div class="email error"></div>
+  <label for="password">Password</label>
+  <input type="password" name="password" id="password" required />
+  <div class="password error"></div>
+  <button type="submit">Log In</button>
+</form>
+
+<script>
+  const form = document.querySelector("form");
+
+  form.addEventListener("submit", (e) => {
+    e.preventDefault();
+
+    // Get the values
+    const email = form.email.value;
+    const password = form.password.value;
+
+    console.log(email, password);
+  });
+</script>
 
 <%- include('./partials/footer'); %>
