--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 
 <form>
   <h2>Log In</h2>
+  <div class="email error login"></div>
   <label for="email">Email</label>
   <input type="email" name="email" id="email" required />
   <div class="email error"></div>
@@ -13,15 +14,41 @@
 
 <script>
   const form = document.querySelector("form");
+  const emailError = document.querySelector(".email.error");
+  const passwordError = document.querySelector(".password.error");
+  const loginError = document.querySelector(".email.error.login");
 
-  form.addEventListener("submit", (e) => {
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
+
+    // reset errors
+    emailError.textContent = "";
+    passwordError.textContent = "";
+    loginError.textContent = "";
 
     // Get the values
     const email = form.email.value;
     const password = form.password.value;
 
-    console.log(email, password);
+    try {
+      const res = await fetch("/login", {
+        method: "POST",
+        body: JSON.stringify({ email, password }),
+        headers: { "Content-Type": "application/json" },
+      });
+
+      const data = await res.json();
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
+        loginError.textContent = data.errors;
+      }
+      if (data.user) {
+        location.assign("/");
+      }
+    } catch (err) {
+      console.log(err);
+    }
   });
 </script>
 
