--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,10 @@
   <body>
     <nav>
       <h1><a href="/">Smoothie World</a></h1>
+      <ul>
+        <li><a href="/signup" class="btn">Sign Up</a></li>
+        <li><a href="/login">Log In</a></li>
+      </ul>
     </nav>
   </body>
 </html>
