--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,13 @@
     <nav>
       <h1><a href="/">Smoothie World</a></h1>
       <ul>
+        <% if (user) { %>
+        <li>Welcome, <%= user.email %></li>
+        <li><a href="/logout">Log Out</a></li>
+        <% } else { %>
         <li><a href="/signup" class="btn">Sign Up</a></li>
         <li><a href="/login">Log In</a></li>
+        <% } %>
       </ul>
     </nav>
   </body>
